<resources>
    <string name="app_name">My Weather 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Preference Titles -->
    <string name="weather_header">Weather</string>
    <string name="sync_header">Sync</string>

    <!-- Weather Preferences -->
    <string name="tempUnit_title">Temperature Units</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


    <!-- weather fragment -->
    <string name="min_max_temp">%d / %d</string>
</resources>